# miss

./: .gitignore  README.md  pyproject.toml  requirements.txt  transform_data.py
data/: cut_watermark.py  dataset.csv  dates.txt  find_watermark.py  fire_grid.py  get_lat_long.py  readme.md  rhodos_wind.csv
data/raw/DL_FIRE_J1V-C2_740979/: fire_archive_J1V-C2_740979.csv
data/raw/DL_FIRE_SV-C2_740981/: fire_archive_SV-C2_740981.csv
src/: charts.py  convert_to_grid.py  simulation.py  simulation_basic.py
