[project]
name = "miss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "netcdf4>=1.7.4",
    "notebook>=7.5.5",
    "seaborn>=0.13.2",
    "xarray>=2026.4.0",
]
